Added details activity

--- a/BooksApp/app/src/main/res/layout/activity_login.xml
+++ b/BooksApp/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@mipmap/mainbackground"
     android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
-    tools:context=".Model.LoginActivity">
+    tools:context=".Activities.LoginActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
