--- a/BooksApp/app/src/main/res/layout/activity_books_catalog.xml
+++ b/BooksApp/app/src/main/res/layout/activity_books_catalog.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/background_dark"
-    tools:context=".BooksCatalog">
+    tools:context=".Activities.BooksCatalog">
 
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
