--- a/BooksApp/app/src/main/res/layout/book_cardview.xml
+++ b/BooksApp/app/src/main/res/layout/book_cardview.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/bookcard"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
     android:layout_width="160dp"
