--- a/BooksApp/app/src/main/res/layout/activity_book_detail.xml
+++ b/BooksApp/app/src/main/res/layout/activity_book_detail.xml
@@ -15,9 +15,9 @@
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="514dp"
+        android:layout_height="match_parent"
         android:padding="10dp"
-        tools:layout_editor_absoluteX="105dp"
+        tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp">
 
         <LinearLayout
@@ -26,27 +26,28 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <ImageView
+            <com.yinglan.shadowimageview.ShadowImageView
+                android:layout_marginTop="20dp"
                 android:id="@+id/bookdetail_img"
-                android:layout_width="125dp"
-                android:layout_height="170dp"
-                android:background="#2d2d"
-                android:scaleType="centerCrop"
-                android:elevation="10dp"
-                android:outlineAmbientShadowColor="@color/rating5"/>
+                android:layout_width="278dp"
+                android:layout_height="428dp"
+                app:shadowRound="20dp"
+                app:shadowSrc="@color/Black"
+                app:shadowColor="@color/colorPrimary"/>
 
             <TextView
                 android:id="@+id/bookdetail_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="The Beginning (part 2)"
-                android:textSize="18sp"
-                android:textStyle="bold"
                 android:shadowColor="@color/White"
                 android:shadowDx="1"
                 android:shadowDy="1"
-                android:shadowRadius="2" />
+                android:shadowRadius="2"
+                android:text="The Beginning (part 2)"
+                android:textColor="@color/White"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/bookdetail_subtitle"
@@ -54,6 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="The end  is near the horizon"
+                android:textColor="@color/White"
                 android:textSize="13sp"
                 android:textStyle="bold" />
 
@@ -61,6 +63,7 @@
                 android:id="@+id/bookdetail_author"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/White"
                 android:layout_marginTop="10dp"
                 android:text="Author 1, author 2"
                 android:textSize="13sp"
@@ -70,7 +73,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginTop="15dp">
 
                 <TextView
                     android:id="@+id/bookdetail_rating"
@@ -81,7 +85,7 @@
                     android:background="#edecec"
                     android:padding="8dp"
                     android:text="Rating"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/bookdetail_category"
@@ -102,38 +106,48 @@
                     android:background="#edecec"
                     android:padding="8dp"
                     android:text="Price"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/bookdetail_desc"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="131dp"
+                android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
-                android:text="Description"
-                android:textSize="18sp" />
+                android:background="@color/TransparentGrey">
+
+                <TextView
+                    android:id="@+id/bookdetail_desc"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                    android:textColor="@color/White"
+                    android:layout_margin="13dp"
+                    android:textSize="18sp" />
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:layout_editor_absoluteX="0dp">
+
+                <Button
+                    android:id="@+id/bookdetail_buyBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:background="@color/rating5"
+                    android:padding="8dp"
+                    android:text="Buy" />
+
+            </LinearLayout>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="0dp">
 
-        <Button
-            android:id="@+id/bookdetail_buyBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:background="@color/rating5"
-            android:padding="8dp"
-            android:text="Buy" />
-
-    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
